# ppfl

./: .gitignore  Cargo.toml  README.md
admin/: package-lock.json  package.json  vite.config.js
admin/src/: App.vue
admin/src/components/: ImageCard.vue
backend/: flake.nix
backend/src/: main.rs
backend/src/handlers/: images.rs  mod.rs  upload.rs
frontend/: package-lock.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: ImageCard.vue
src/: auth.rs  main.rs
