[package]
name = "ppfl-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.11.0"
actix-web-actors = "4.3.1"
actix-web-httpauth = "0.8.2"
futures-util = "0.3.31"
mime = "0.3.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["macros"] }
uuid = { version = "1.17.0", features = ["v4"] }
